--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hotel-reservation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dingq84.github.io/hotel-reservation",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
